# fd-lock

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: error.rs  file_lock.rs  lib.rs  owned_read_guard.rs  owned_write_guard.rs  read_guard.rs  rw_lock.rs  unix.rs  windows.rs  write_guard.rs
src/sys/: mod.rs  unix.rs
src/sys/unix/: file_lock.rs  mod.rs  read_guard.rs  rw_lock.rs  write_guard.rs
src/sys/unsupported/: read_guard.rs  rw_lock.rs  write_guard.rs
src/sys/wasi_sys/: mod.rs  read_guard.rs  rw_lock.rs  write_guard.rs
src/sys/windows/: file_lock.rs  mod.rs  read_guard.rs  rw_lock.rs  utils.rs  write_guard.rs
src/windows/: mod.rs  read_guard.rs  write_guard.rs
tests/: test.rs
